found/fixed bug in script. added event listener and results list

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 
 <body>
   <header>
+    <h1>Bus Mall</h1>
   </header>
 
-  <main id="displayArea">
-  </main>
+  <p>Of the products below, which would you be most likely to buy?</p>
+  <main id="displayArea"></main>
+  
+
+  <section id="results">
+  </section>
 
 
 
