--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Bus Mall</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Monoton|PT+Sans+Narrow&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,6 +14,7 @@
   </header>
 
   <p>Of the products below, which would you be most likely to buy?</p>
+
   <main id="displayArea"></main>
   
 
