--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input type="number" value="3" name="numberOfOptionsField" required><br>
       Number of rounds:<br>
       <input type="number" value="25" name="numberOfRoundsField" required><br>
-      <input type="button" value="Restart Game" name="resetButton">
+      <input type="submit" value="Restart Game" name="resetButton">
     </fieldset>
   </form>
 
