--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>Bus Mall</h1>
     </header>
 
-    <p>Of the products below, which would you be most likely to buy?</p>
+    <p id="headline">Of the products below, which would you be most likely to buy?</p>
 
     <canvas id="myChart" width="400" height="200"></canvas>
 
