--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   <section id="results"></section>
 
-  <script src="node_modules/chart.js/dist/Chart.bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
   <script src="js/app.js"></script>
 
 </body>
